@@ -52,7 +52,7 @@ if [[ -z $heap_size ]]; then
 fi
 
 jvm_dir=""
-for dir in /usr/lib/jvm/jdk1.8*; do
+for dir in /usr/lib/jvm/jdk*; do
     [ -d "${dir}" ] && jvm_dir="${dir}" && break
 done
 export JAVA_HOME="${jvm_dir}"
@@ -84,7 +84,7 @@ echo "Setting Heap to ${heap_size}"
 export JVM_MEM_OPTS="-Xms${heap_size} -Xmx${heap_size}"
 
 echo "Enabling GC Logs"
-export JAVA_OPTS="-XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:/home/ubuntu/wso2am/repository/logs/gc.log"
+#export JAVA_OPTS="-XX:+PrintGC -Xlog:gc* -XX:+PrintGCTimeStamps -Xloggc:/home/ubuntu/wso2am/repository/logs/gc.log"
 
 echo "Starting APIM"
 wso2am/bin/wso2server.sh start
